// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Binary first, then Library |  Binary build, deployment with PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for build, supplied library later: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-darwin",
  "schema.prisma",
]
`;

exports[`Binary first, then Library |  Binary build, deployment with PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for build, supplied library later: ./node_modules/.prisma/client @ 1 - after_env_change 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-darwin",
  "schema.prisma",
]
`;

exports[`Binary first, then Library |  Binary build, deployment with PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for build, supplied library later: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-darwin",
  "migration-engine-darwin",
  "package.json",
  "prisma-fmt-darwin",
  "query-engine-darwin",
]
`;

exports[`Binary first, then Library |  Binary build, deployment with PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for build, supplied library later: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-darwin",
  "scripts",
]
`;

exports[`Binary first, then Library |  Binary build, deployment with PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for build, supplied library later: version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules/@prisma/engines/query-engine-darwin)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-darwin)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-darwin)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-darwin)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Binary first, then Library |  Binary build, deployment with PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for build, supplied library later: version output @ 1 - after_env_change 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
N-API Query Engine    : placeholder (at custom-engines/library/Darwin/libquery_engine_napi-darwin.dylib.node, resolved by PRISMA_QUERY_ENGINE_LIBRARY)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-darwin)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-darwin)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-darwin)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;
